added endpoints to ThermostatAPI.ipynb

--- a/shared_data/LampFastAPI.ipynb
+++ b/shared_data/LampFastAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# defining some variables\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "@app.get(\"/\")\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# GET request to get all the information about the lamp\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# GET request to get the status of the lamp\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# GET request to get the power consumption of the lamp\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# GET request to toggle the status of the lamp\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# POST request to change the status of the lamp\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# GET request to get the device ID of the lamp\n",
@@ -154,13 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:     Started server process [11778]\n",
+      "INFO:     Started server process [5002]\n",
       "INFO:     Waiting for application startup.\n",
       "INFO:     Application startup complete.\n",
       "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
@@ -170,33 +170,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:41356 - \"GET /lamp HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:41356 - \"GET /lamp HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:41356 - \"GET /lamp HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:44902 - \"POST /lamp/status/on HTTP/1.1\" 200 OK\n",
-      "on\n",
-      "INFO:     127.0.0.1:48352 - \"GET /lamp HTTP/1.1\" 200 OK\n",
-      "on\n",
-      "INFO:     127.0.0.1:48352 - \"GET /lamp HTTP/1.1\" 200 OK\n",
-      "on\n",
-      "INFO:     127.0.0.1:48352 - \"GET /lamp HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:48364 - \"POST /lamp/status/on HTTP/1.1\" 200 OK\n",
-      "on\n",
-      "INFO:     127.0.0.1:48368 - \"GET /lamp HTTP/1.1\" 200 OK\n",
-      "on\n",
-      "INFO:     127.0.0.1:48368 - \"GET /lamp HTTP/1.1\" 200 OK\n",
-      "on\n",
-      "INFO:     127.0.0.1:42202 - \"GET /lamp HTTP/1.1\" 200 OK\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:     Shutting down\n",
-      "INFO:     Waiting for application shutdown.\n",
-      "INFO:     Application shutdown complete.\n",
-      "INFO:     Finished server process [11778]\n"
+      "INFO:     127.0.0.1:35618 - \"GET / HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:35632 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:35632 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:53914 - \"GET /lamp HTTP/1.1\" 200 OK\n"
      ]
     }
    ],
@@ -207,16 +184,22 @@
     "    uvicorn.run(app)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   }
  ],
