fixed and tested endpoints of ThermostatAPI.ipynb

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "outputs": [],
    "source": [
     "# Defining the thermostat class\n",
@@ -39,7 +39,7 @@
     "    def get_temperature(self):\n",
     "        return self.temperature\n",
     "\n",
-    "    async def get_humidity(self):\n",
+    "    def get_humidity(self):\n",
     "        return self.humidity\n",
     "\n",
     "    def get_mode(self):\n",
@@ -49,7 +49,7 @@
     "        return self.name\n",
     "\n",
     "    def get_json(self):\n",
-    "        return json.dumps(self.__dict__)\n",
+    "        return self.__dict__\n",
     "\n",
     "    def set_temperature(self, temperature: int):\n",
     "        self.temperature = temperature\n",
@@ -58,7 +58,10 @@
     "        self.humidity = humidity\n",
     "\n",
     "    def set_mode(self, mode: str):\n",
-    "        self.mode = mode"
+    "        self.mode = mode\n",
+    "\n",
+    "    def set_name(self, name: str):\n",
+    "        self.name = name\n"
    ],
    "metadata": {
     "collapsed": false
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "outputs": [],
    "source": [
     "# Creating a thermostat object\n",
@@ -81,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "outputs": [
     {
      "data": {
-      "text/plain": "'{\"name\": \"Thermostat\", \"temperature\": 20, \"humidity\": 50, \"mode\": \"cool\"}'"
+      "text/plain": "{'name': 'Thermostat', 'temperature': 20, 'humidity': 50, 'mode': 'cool'}"
      },
-     "execution_count": 16,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +104,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "20"
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thermostat.get_temperature()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "50"
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thermostat.get_humidity()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'cool'"
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thermostat.get_mode()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'Thermostat'"
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thermostat.get_name()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "25"
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thermostat.set_temperature(25)\n",
+    "thermostat.get_temperature()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "60"
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thermostat.set_humidity(60)\n",
+    "thermostat.get_humidity()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'heat'"
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thermostat.set_mode(\"heat\")\n",
+    "thermostat.get_mode()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "outputs": [],
    "source": [
     "# Defining the API endpoints\n",
@@ -171,202 +317,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:40280 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:40280 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:53194 - \"GET / HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:54724 - \"GET /thermostat HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:46006 - \"GET /thermostat/temperature HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:58420 - \"PUT /thermostat/temperature?temperature=200 HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:50180 - \"GET /thermostat/humidity HTTP/1.1\" 500 Internal Server Error\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:    Exception in ASGI application\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/encoders.py\", line 152, in jsonable_encoder\n",
-      "    data = dict(obj)\n",
-      "TypeError: 'coroutine' object is not iterable\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/encoders.py\", line 157, in jsonable_encoder\n",
-      "    data = vars(obj)\n",
-      "TypeError: vars() argument must have __dict__ attribute\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/uvicorn/protocols/http/h11_impl.py\", line 407, in run_asgi\n",
-      "    result = await app(  # type: ignore[func-returns-value]\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/uvicorn/middleware/proxy_headers.py\", line 78, in __call__\n",
-      "    return await self.app(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/applications.py\", line 270, in __call__\n",
-      "    await super().__call__(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/applications.py\", line 124, in __call__\n",
-      "    await self.middleware_stack(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/middleware/errors.py\", line 184, in __call__\n",
-      "    raise exc\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/middleware/errors.py\", line 162, in __call__\n",
-      "    await self.app(scope, receive, _send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/middleware/exceptions.py\", line 79, in __call__\n",
-      "    raise exc\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/middleware/exceptions.py\", line 68, in __call__\n",
-      "    await self.app(scope, receive, sender)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/middleware/asyncexitstack.py\", line 21, in __call__\n",
-      "    raise e\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/middleware/asyncexitstack.py\", line 18, in __call__\n",
-      "    await self.app(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/routing.py\", line 706, in __call__\n",
-      "    await route.handle(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/routing.py\", line 276, in handle\n",
-      "    await self.app(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/routing.py\", line 66, in app\n",
-      "    response = await func(request)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/routing.py\", line 255, in app\n",
-      "    content = await serialize_response(\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/routing.py\", line 152, in serialize_response\n",
-      "    return jsonable_encoder(response_content)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/encoders.py\", line 160, in jsonable_encoder\n",
-      "    raise ValueError(errors) from e\n",
-      "ValueError: [TypeError(\"'coroutine' object is not iterable\"), TypeError('vars() argument must have __dict__ attribute')]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:     127.0.0.1:39260 - \"GET /thermostat/humidity HTTP/1.1\" 500 Internal Server Error\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:    Exception in ASGI application\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/encoders.py\", line 152, in jsonable_encoder\n",
-      "    data = dict(obj)\n",
-      "TypeError: 'coroutine' object is not iterable\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/encoders.py\", line 157, in jsonable_encoder\n",
-      "    data = vars(obj)\n",
-      "TypeError: vars() argument must have __dict__ attribute\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/uvicorn/protocols/http/h11_impl.py\", line 407, in run_asgi\n",
-      "    result = await app(  # type: ignore[func-returns-value]\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/uvicorn/middleware/proxy_headers.py\", line 78, in __call__\n",
-      "    return await self.app(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/applications.py\", line 270, in __call__\n",
-      "    await super().__call__(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/applications.py\", line 124, in __call__\n",
-      "    await self.middleware_stack(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/middleware/errors.py\", line 184, in __call__\n",
-      "    raise exc\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/middleware/errors.py\", line 162, in __call__\n",
-      "    await self.app(scope, receive, _send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/middleware/exceptions.py\", line 79, in __call__\n",
-      "    raise exc\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/middleware/exceptions.py\", line 68, in __call__\n",
-      "    await self.app(scope, receive, sender)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/middleware/asyncexitstack.py\", line 21, in __call__\n",
-      "    raise e\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/middleware/asyncexitstack.py\", line 18, in __call__\n",
-      "    await self.app(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/routing.py\", line 706, in __call__\n",
-      "    await route.handle(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/routing.py\", line 276, in handle\n",
-      "    await self.app(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/routing.py\", line 66, in app\n",
-      "    response = await func(request)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/routing.py\", line 255, in app\n",
-      "    content = await serialize_response(\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/routing.py\", line 152, in serialize_response\n",
-      "    return jsonable_encoder(response_content)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/encoders.py\", line 160, in jsonable_encoder\n",
-      "    raise ValueError(errors) from e\n",
-      "ValueError: [TypeError(\"'coroutine' object is not iterable\"), TypeError('vars() argument must have __dict__ attribute')]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:     127.0.0.1:54444 - \"PUT /thermostat/humidity?humidity=500 HTTP/1.1\" 500 Internal Server Error\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:    Exception in ASGI application\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/encoders.py\", line 152, in jsonable_encoder\n",
-      "    data = dict(obj)\n",
-      "TypeError: 'coroutine' object is not iterable\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/encoders.py\", line 157, in jsonable_encoder\n",
-      "    data = vars(obj)\n",
-      "TypeError: vars() argument must have __dict__ attribute\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/uvicorn/protocols/http/h11_impl.py\", line 407, in run_asgi\n",
-      "    result = await app(  # type: ignore[func-returns-value]\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/uvicorn/middleware/proxy_headers.py\", line 78, in __call__\n",
-      "    return await self.app(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/applications.py\", line 270, in __call__\n",
-      "    await super().__call__(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/applications.py\", line 124, in __call__\n",
-      "    await self.middleware_stack(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/middleware/errors.py\", line 184, in __call__\n",
-      "    raise exc\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/middleware/errors.py\", line 162, in __call__\n",
-      "    await self.app(scope, receive, _send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/middleware/exceptions.py\", line 79, in __call__\n",
-      "    raise exc\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/middleware/exceptions.py\", line 68, in __call__\n",
-      "    await self.app(scope, receive, sender)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/middleware/asyncexitstack.py\", line 21, in __call__\n",
-      "    raise e\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/middleware/asyncexitstack.py\", line 18, in __call__\n",
-      "    await self.app(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/routing.py\", line 706, in __call__\n",
-      "    await route.handle(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/routing.py\", line 276, in handle\n",
-      "    await self.app(scope, receive, send)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/starlette/routing.py\", line 66, in app\n",
-      "    response = await func(request)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/routing.py\", line 255, in app\n",
-      "    content = await serialize_response(\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/routing.py\", line 152, in serialize_response\n",
-      "    return jsonable_encoder(response_content)\n",
-      "  File \"/home/matt/.local/lib/python3.10/site-packages/fastapi/encoders.py\", line 160, in jsonable_encoder\n",
-      "    raise ValueError(errors) from e\n",
-      "ValueError: [TypeError(\"'coroutine' object is not iterable\"), TypeError('vars() argument must have __dict__ attribute')]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:     127.0.0.1:59932 - \"GET /thermostat HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:54430 - \"GET /thermostat/temperature HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:49284 - \"PUT /thermostat/temperature?temperature=2000 HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:46490 - \"GET /thermostat/temperature HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:39556 - \"PUT /thermostat/name?name=Thermostat_1 HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:39564 - \"GET /thermostat/name HTTP/1.1\" 200 OK\n"
      ]
     }
    ],
@@ -385,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "outputs": [],
    "source": [],
    "metadata": {
