deleted debug stuff from ThermostatAPI.ipynb

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "outputs": [],
    "source": [
     "# Defining the thermostat class\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "outputs": [],
    "source": [
     "# Creating a thermostat object\n",
@@ -84,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "outputs": [
     {
      "data": {
       "text/plain": "{'name': 'Thermostat', 'temperature': 20, 'humidity': 50, 'mode': 'cool'}"
      },
-     "execution_count": 55,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,150 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "20"
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "thermostat.get_temperature()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "50"
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "thermostat.get_humidity()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'cool'"
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "thermostat.get_mode()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'Thermostat'"
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "thermostat.get_name()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "25"
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "thermostat.set_temperature(25)\n",
-    "thermostat.get_temperature()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "60"
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "thermostat.set_humidity(60)\n",
-    "thermostat.get_humidity()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'heat'"
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "thermostat.set_mode(\"heat\")\n",
-    "thermostat.get_mode()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "# Defining the API endpoints\n",
@@ -301,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "outputs": [
     {
      "name": "stderr",
@@ -317,8 +174,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:39556 - \"PUT /thermostat/name?name=Thermostat_1 HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:39564 - \"GET /thermostat/name HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:36806 - \"PUT /thermostat/name?name=Thermostat_1 HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:36806 - \"PUT /thermostat/name?name=Thermostat_2 HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:36806 - \"GET /thermostat/name HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [13855]\n"
      ]
     }
    ],
@@ -329,15 +197,12 @@
     "    uvicorn.run(app)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 70,
    "outputs": [],
    "source": [],
    "metadata": {
