--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Simple thermostat API using FastAPI\n",
@@ -21,7 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# Defining the thermostat class\n",
@@ -62,14 +66,17 @@
     "\n",
     "    def set_name(self, name: str):\n",
     "        self.name = name\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# Creating a thermostat object\n",
@@ -77,34 +84,42 @@
     "                        temperature=20,\n",
     "                        humidity=50,\n",
     "                        mode=\"cool\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "{'name': 'Thermostat', 'temperature': 20, 'humidity': 50, 'mode': 'cool'}"
+      "text/plain": [
+       "{'name': 'Thermostat', 'temperature': 20, 'humidity': 50, 'mode': 'cool'}"
+      ]
      },
-     "execution_count": 68,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "thermostat.get_json()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# Defining the API endpoints\n",
@@ -151,42 +166,37 @@
     "async def set_name(name: str):\n",
     "    thermostat.set_name(name)\n",
     "    return thermostat.get_name()\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:     Started server process [13855]\n",
+      "INFO:     Started server process [279]\n",
       "INFO:     Waiting for application startup.\n",
       "INFO:     Application startup complete.\n",
-      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+      "INFO:     Uvicorn running on http://0.0.0.0:8001 (Press CTRL+C to quit)\n",
+      "WARNING:  Invalid HTTP request received.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:36806 - \"PUT /thermostat/name?name=Thermostat_1 HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:36806 - \"PUT /thermostat/name?name=Thermostat_2 HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:36806 - \"GET /thermostat/name HTTP/1.1\" 200 OK\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:     Shutting down\n",
-      "INFO:     Waiting for application shutdown.\n",
-      "INFO:     Application shutdown complete.\n",
-      "INFO:     Finished server process [13855]\n"
+      "INFO:     172.17.0.1:39198 - \"GET / HTTP/1.1\" 200 OK\n",
+      "INFO:     172.17.0.1:36030 - \"GET /docks HTTP/1.1\" 404 Not Found\n",
+      "INFO:     172.17.0.1:36030 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     172.17.0.1:36030 - \"GET /openapi.json HTTP/1.1\" 200 OK\n"
      ]
     }
    ],
@@ -194,41 +204,42 @@
     "# Running the API\n",
     "if __name__ == \"__main__\":\n",
     "    nest_asyncio.apply()\n",
+    "    #uvicorn.run(app, host=\"0.0.0.0\", port=8001)\n",
     "    uvicorn.run(app)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "outputs": [],
-   "source": [],
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
