deleted debug stuff from ThermostatAPI.ipynb

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -98,11 +98,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "{'name': 'Thermostat', 'temperature': 20, 'humidity': 50, 'mode': 'cool'}"
-      ]
+      "text/plain": "{'name': 'Thermostat', 'temperature': 20, 'humidity': 50, 'mode': 'cool'}"
      },
-     "execution_count": 4,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -170,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -182,21 +180,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:     Started server process [279]\n",
+      "INFO:     Started server process [13855]\n",
       "INFO:     Waiting for application startup.\n",
       "INFO:     Application startup complete.\n",
-      "INFO:     Uvicorn running on http://0.0.0.0:8001 (Press CTRL+C to quit)\n",
-      "WARNING:  Invalid HTTP request received.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:     172.17.0.1:39198 - \"GET / HTTP/1.1\" 200 OK\n",
-      "INFO:     172.17.0.1:36030 - \"GET /docks HTTP/1.1\" 404 Not Found\n",
-      "INFO:     172.17.0.1:36030 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     172.17.0.1:36030 - \"GET /openapi.json HTTP/1.1\" 200 OK\n"
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n",
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [13855]\n"
      ]
     }
    ],
@@ -210,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false,
     "jupyter": {
