added create_smart_connector func to ThermostatAPI.ipynb

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -168,6 +168,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [415 Unsupported Media Type]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# register API in the knowledge engine\n",
+    "import httpx\n",
+    "\n",
+    "# Knowledge engine REST API URL\n",
+    "URL = \"http://127.0.0.1:8280/rest\"\n",
+    "\n",
+    "# Creating a smart connector\n",
+    "def create_smart_connector():\n",
+    "    # Smart connector data\n",
+    "    sc_data = {\n",
+    "        \"KnowledgeBaseId\": \"https://127.0.0.1:8000/thermostat\",\n",
+    "        \"KnowledgeBaseName\": \"Thermostat API v0.0.1\",\n",
+    "        \"KnowledgeBaseDescription\": \"Thermostat API v0.0.1 for the Smart Home\",\n",
+    "    }\n",
+    "\n",
+    "    headers = {\n",
+    "        'accept': 'application/json; charset=UTF-8',\n",
+    "        'Knowledge-Base-Id': 'https://ke.interconnectproject.eu/adapter/evtd-kb',\n",
+    "    }\n",
+    "\n",
+    "    # Registering the smart connector\n",
+    "    response = httpx.post(URL + \"/sc\", headers=headers,data=sc_data)\n",
+    "    print(response)\n",
+    "\n",
+    "create_smart_connector()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 82,
    "metadata": {
     "collapsed": false,
