made create_smart_connector func sort of work in ThermostatAPI.ipynb

--- a/shared_data/ThermostatAPI.ipynb
+++ b/shared_data/ThermostatAPI.ipynb
@@ -168,13 +168,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Response [415 Unsupported Media Type]>\n"
+      "URL:\n",
+      " http://127.0.0.1:8280/rest\n",
+      "\n",
+      "Headers:\n",
+      " {'Content-Type': 'application/json', 'Knowledge-Base-Id': 'http://127.0.0.1:8000/thermostat'}\n",
+      "\n",
+      "Smart connector data:\n",
+      " {'knowledgeBaseId': 'http://127.0.0.1:8000/thermostat', 'knowledgeBaseName': 'Thermostat API v0.0.1', 'knowledgeBaseDescription': 'Thermostat API v0.0.1 for the Smart Home', 'reasonerEnabled': 'false'}\n",
+      "\n",
+      "<Response [200 OK]>\n",
+      "\n"
      ]
     }
    ],
@@ -189,19 +199,32 @@
     "def create_smart_connector():\n",
     "    # Smart connector data\n",
     "    sc_data = {\n",
-    "        \"KnowledgeBaseId\": \"https://127.0.0.1:8000/thermostat\",\n",
-    "        \"KnowledgeBaseName\": \"Thermostat API v0.0.1\",\n",
-    "        \"KnowledgeBaseDescription\": \"Thermostat API v0.0.1 for the Smart Home\",\n",
+    "        \"knowledgeBaseId\": \"http://127.0.0.1:8000/thermostat\",\n",
+    "        \"knowledgeBaseName\": \"Thermostat API v0.0.1\",\n",
+    "        \"knowledgeBaseDescription\": \"Thermostat API v0.0.1 for the Smart Home\",\n",
+    "        \"reasonerEnabled\": \"false\",\n",
     "    }\n",
     "\n",
     "    headers = {\n",
     "        'accept': 'application/json; charset=UTF-8',\n",
-    "        'Knowledge-Base-Id': 'https://ke.interconnectproject.eu/adapter/evtd-kb',\n",
+    "        \"knowledgeBaseId\": \"http://127.0.0.1:8000/thermostat\",\n",
+    "    }\n",
+    "\n",
+    "    headers2 = {\n",
+    "        #'accept': 'application/json,\n",
+    "        'Content-Type': 'application/json',\n",
+    "        'Knowledge-Base-Id': \"http://127.0.0.1:8000/thermostat\",\n",
+    "\n",
     "    }\n",
     "\n",
     "    # Registering the smart connector\n",
-    "    response = httpx.post(URL + \"/sc\", headers=headers,data=sc_data)\n",
+    "    response = httpx.post(URL + \"/sc\", headers=headers2, json=sc_data)\n",
+    "\n",
+    "    print(f'URL:\\n {URL}\\n')\n",
+    "    print(f'Headers:\\n {headers2}\\n')\n",
+    "    print(f'Smart connector data:\\n {sc_data}\\n')\n",
     "    print(response)\n",
+    "    print(response.text)\n",
     "\n",
     "create_smart_connector()"
    ],
@@ -211,7 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -220,17 +252,14 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:     Started server process [13855]\n",
-      "INFO:     Waiting for application startup.\n",
-      "INFO:     Application startup complete.\n",
-      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n",
-      "INFO:     Shutting down\n",
-      "INFO:     Waiting for application shutdown.\n",
-      "INFO:     Application shutdown complete.\n",
-      "INFO:     Finished server process [13855]\n"
+     "ename": "NameError",
+     "evalue": "name 'nest_asyncio' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [26]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Running the API\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;18m__name__\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m__main__\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[0;32m----> 3\u001B[0m     \u001B[43mnest_asyncio\u001B[49m\u001B[38;5;241m.\u001B[39mapply()\n\u001B[1;32m      4\u001B[0m     \u001B[38;5;66;03m#uvicorn.run(app, host=\"0.0.0.0\", port=8001)\u001B[39;00m\n\u001B[1;32m      5\u001B[0m     uvicorn\u001B[38;5;241m.\u001B[39mrun(app)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'nest_asyncio' is not defined"
      ]
     }
    ],
